Fix header overflow

--- a/_sass/en/_footer.sass
+++ b/_sass/en/_footer.sass
@@ -4,7 +4,7 @@ ul.footer
 
   margin: 30vh auto 5vh auto
   +breakpoint(md)
-    margin: 40vh auto 5vh auto
+    margin: 35vh auto 5vh auto
   padding: 0
 
   display: inline-block
